project-complex/templates/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment

spec: #customize exactly how this deployment behaves.
  replicas: 3
  selector:
    matchLabels:
      component: server 
  template:
    metadata:
      labels:
        component: server
    spec: #customize the behavior of each of the pods that gets created.
      containers: #provide containers that this pods that its supposed to run
      - name: server
        image: rhedgomez/multi-server 
        ports:
          - containerPort: 5000
