project-complex/templates/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: worker
  template:
    metadata:
      labels: #labels that needs to be applied to every pod that it gets created.
        component: worker
    spec:
      containers:
        - name: worker
          image: rhedgomez/multi-worker
          #inject some environment variable here to tell it  how to connect to redis.
          #and simply just passing these environment variable when  a container is created inside of the pod
