project-complex/templates/postgres-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip-service
spec:
  type: ClusterIP
  selector: #provide a selector so that the service that we are creating knows what set of pod it
          #is supposed to be providing access to. in this case we provide access to multi-client pod
    component: postgres #What set of pods is going to look for?

  ports: #expose ports that the cluster ip  service that is going to expose be availble on.
    - port: 5432  #port property is going to be how other pods our other objects inside of our cluster are going to access the pod that we are kinda governing access to.
      targetPort: 5432 #targetPort property:the port on the target pod that we are providing access to.
